# TestingApi

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.github/workflows/: compileAndTest.yaml  create_tag.yaml  create_tag_merge.yaml  cross-compile.yaml  dockerBuild.yaml  releaseArtifacts.yaml
kuberneties/: 0-namespace.yaml  1-deployment.yaml  2-service.yaml  3-ingress.yaml
kuberneties/argo/: argocd.yaml
src/: lib.rs  main.rs
src/args/: mod.rs
src/paths/: mod.rs
src/paths/auth/: mod.rs
tests/: path_test.rs
