[package]
name = "testing_api"
version = "0.1.0"
edition = "2021"
licenceFile = "./LICENSE"

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
